--- a/docker-compose/withPostgres/docker-compose.yml
+++ b/docker-compose/withPostgres/docker-compose.yml
@@ -17,12 +17,15 @@ services:
     volumes:
       - db_storage:/var/lib/postgresql/data
       - ./init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
+      - ./customer-schema.sql:/docker-entrypoint-initdb.d/customer-schema.sql
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -h localhost -U ${POSTGRES_USER} -d ${POSTGRES_DB}']
       interval: 5s
       timeout: 5s
       retries: 10
-
+    ports:
+      - 5432:5432
+      
   n8n:
     image: docker.n8n.io/n8nio/n8n
     restart: always
@@ -39,6 +42,7 @@ services:
       - postgres
     volumes:
       - n8n_storage:/home/node/.n8n
+    command: start --tunnel
     depends_on:
       postgres:
         condition: service_healthy
