--- a/docker-compose/withPostgres/.env
+++ b/docker-compose/withPostgres/.env
@@ -4,3 +4,8 @@ POSTGRES_DB=n8n
 
 POSTGRES_NON_ROOT_USER=changeUser
 POSTGRES_NON_ROOT_PASSWORD=changePassword
+
+# Add your ngrok auth token here!
+# Get it from https://dashboard.ngrok.com/get-started/your-authtoken
+NGROK_AUTHTOKEN=36jdU1AM8XwHiqtZxsHEKyd34iH_39bpFuVt9bFQaBzjgMDFK
+WEBHOOK_URL=https://unslicked-stochastically-khadijah.ngrok-free.dev
